@@ -14,6 +14,7 @@ HEADERS = \
 	synthv1_jack.h \
 	synthv1_config.h \
 	synthv1_filter.h \
+	synthv1_formant.h \
 	synthv1_wave.h \
 	synthv1_ramp.h \
 	synthv1_list.h \
@@ -42,6 +43,7 @@ SOURCES = \
 	synthv1_ui.cpp \
 	synthv1_jack.cpp \
 	synthv1_config.cpp \
+	synthv1_formant.cpp \
 	synthv1_wave.cpp \
 	synthv1_nsm.cpp \
 	synthv1_param.cpp \
