@@ -5,6 +5,7 @@ ChangeLog
 
 GIT HEAD
 
+- A fourth DCF type has been added: a vocal Formant filter.
 - A third DCF slope/type has been added: the RBJ's bi-quad.
 - Prefer Qt5 over Qt4 by default with configure script.
 - Introducing brand new OUT FX Send parameter per engine.
